--- a/gioHang.html
+++ b/gioHang.html
@@ -279,8 +279,8 @@
                 </div>
                 <div class="ngancuoi"></div>
                 <div class="luuyvanchuyen">
-                    <p class="luuy">Lưu ý:</p>
-                    <input class="noidungluuy" type="text" placeholder="Dành cho ShopSale">
+                    <p class="luuy">Cách thức thanh toán:</p>
+                    <input class="noidungluuy" type="text" placeholder="Thanh toán khi nhận hàng/Thanh toán qua thẻ">
                 </div>
                 <div class="ngancuoi"></div>
                 <div class="chinhsachvc">
