--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Sale</title>
-    <link href="css/jquery.bxslider.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="assets/owl.carousel.min.css">
-	<link rel="stylesheet" href="assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.13.0-web/css/all.min.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.bxslider.min.js"></script>
     <script src="until.js"></script>    
     <script src="sanPham.js"></script>
     <script src="gioHang.js"></script>
     <script src="formValidation.js"></script>
+    <script src="slider.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/slider.css">
     <style>
         .error2{
             font-size: 12px;
@@ -29,19 +26,6 @@
             font-style:  italic; 
         }
     </style>
-	 <script>
-    	$(document).ready(function(){
-      	$('.slider').bxSlider({
-      		mode: 'fade',
-      		dots: false,
-      		speed: 700,
-      		auto: true,
-      		nav: false,
-      		pause: 2000,
-      		autoHover: true,
-      	});
-    });
-  	</script>
 </head>
 <body>
     <header id="header">
@@ -193,10 +177,26 @@
             </div> 
         </div>  
     </header>
-    <div class="slider">
-        <div><a href="#"><img src="images/9e3321964e6de4f64f6caadaefc0c174.jpg" width="100%" height="400"></a></div>
-        <div><a href="#"><img src="https://cf.shopee.vn/file/3310b6565ed646a2d65559f55fee15ed" width="100%" height="400"></a></div>
-        <div><a href="#"><img src="https://cf.shopee.vn/file/82b8118bc95f333c0aa43d9cc5424b9a" width="100%" height="400"></a></div>	
+    <div class="slider" id="slider">
+        <div class="slider-item" name="slider-item">
+           <img src="images/9e3321964e6de4f64f6caadaefc0c174.jpg" width="100%" height="400">
+        </div>
+        <div class="slider-item" name="slider-item">
+            <img src="https://cf.shopee.vn/file/3310b6565ed646a2d65559f55fee15ed" width="100%" height="400">
+        </div>
+        <div class="slider-item" name="slider-item">
+            <img src="images/9e3321964e6de4f64f6caadaefc0c174.jpg" width="100%" height="400">
+        </div>
+        <div class="slider-item" name="slider-item">
+            <img src="https://cf.shopee.vn/file/82b8118bc95f333c0aa43d9cc5424b9a" width="100%" height="400">
+        </div>
+        <div class="slider-item" name="slider-item">
+            <img src="https://cf.shopee.vn/file/3310b6565ed646a2d65559f55fee15ed" width="100%" height="400">
+        </div>
+        <div class="nut-slider">
+            <span onclick="onClickXemAnhTruoc()" id="btn-prev"><i class="fas fa-chevron-circle-left"></i></span>
+            <span onclick="onClickXemAnhSau()" id="btn-next"><i class="fas fa-chevron-circle-right"></i></span>
+        </div>
     </div>
     <main id="main">
         <div id="danh-muc">
@@ -535,25 +535,10 @@
         </div>
     </div> 
 
-
-
-    <script>
-        $(document).ready(function () {
-            $('.item-lv1 li').hover(function () {
-                $('>ul.item-lv1:not(:animated)', this).slideDown(300);
-
-            }, function () {
-                $('>ul.menu-lv2', this).slideUp(150);
-            }
-            );
-        });
-        
-    </script>
     <script>
         /*b1. Lấy danh sách dưới LCS*/
         var jsonDanhSachSanPham = localStorage.getItem('danhSachSanPham');
         var danhSachSanPham = taoDoiTuongSanPham().fromJSONs(jsonDanhSachSanPham);
-        console.log(danhSachSanPham);
         
 
         /*b2. CHUYỂN danh sách đối tượng thành đoạn html*/
