--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="sanPham.js"></script>
     <script src="gioHang.js"></script>
     <script src="formValidation.js"></script>
-    <script src="slider.js"></script>
+    
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/slider.css">
@@ -178,6 +178,9 @@
         </div>  
     </header>
     <div class="slider" id="slider">
+        <div class="slider-item" name="slider-item">
+            <img src="https://cf.shopee.vn/file/ba3ec5b685edd7800bbe8c37889464ce" width="100%" height="400">
+         </div>
         <div class="slider-item" name="slider-item">
            <img src="images/9e3321964e6de4f64f6caadaefc0c174.jpg" width="100%" height="400">
         </div>
@@ -613,4 +616,5 @@
         }
     </script>
 </body>
+<script src="slider.js"></script>
 </html>
