--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Shop Sale</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.13.0-web/css/all.min.css">
-    <script src="until.js"></script>    
-    <script src="sanPham.js"></script>
-    <script src="gioHang.js"></script>
-    <script src="formValidation.js"></script>
-    
+    <script src="js/until.js"></script>    
+    <script src="js/sanPham.js"></script>
+    <script src="js/gioHang.js"></script>
+    <script src="js/formValidation.js"></script>    
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/slider.css">
@@ -616,5 +615,5 @@
         }
     </script>
 </body>
-<script src="slider.js"></script>
+<script src="js/slider.js"></script>
 </html>
