--- a/gioHang.html
+++ b/gioHang.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/gioHang.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/fontawesome-free-5.13.0-web/css/all.min.css">
-    <script src="until.js"></script>
-    <script src="sanPham.js"></script>
-    <script src="gioHang.js"></script> 
-    <script src="formValidation.js"></script>
+    <script src="js/until.js"></script>
+    <script src="js/sanPham.js"></script>
+    <script src="js/gioHang.js"></script> 
+    <script src="js/formValidation.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
     <style>
@@ -39,7 +39,6 @@
         }
         .thanhtoanbtn:hover{
             background-color: salmon;
-
         }
     </style>
 </head>
