--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         var nodeProducts = document.getElementById('products');
         nodeProducts.innerHTML = HTML;
 
-        function onClickThemVaoGioHang(idSanPham){
+        function onClickThemVaoGioHang(idSanPham, soLuong){
             alert('Thêm vào giỏ hàng sản phẩm có ID '+idSanPham+' thành công!');
 
             /*Logic đưa vào giỏ hàng*/
