--- a/gioHang.html
+++ b/gioHang.html
@@ -529,8 +529,8 @@
             luuDanhSachItemGioHangVaoLCS(dataGioHang, "gioHang");
             //tính tổng tiền
             // Tính lại tổng tiền
-            let nodeTongTien = document.getElementById("tongTien");
-            nodeTongTien.innerHTML = themChamVaoSo(tinhThanhTien()) + " đ";            
+            // let nodeTongTien = document.getElementById("tongTien");
+            // nodeTongTien.innerHTML = themChamVaoSo(tinhThanhTien()) + " đ";            
         }
         // function tinhThanhTien(dataGioHang){
         //     let dataSanPham = layGioHangTuLCS('danhSachSanPham');
