--- a/index.html
+++ b/index.html
@@ -582,18 +582,12 @@
         }
         function sapXepSanPham(){
             var cachSapXep = document.getElementById('sap-xep').value;
-            console.log(cachSapXep);
             var danhSachSanPham = localStorage.getItem('danhSachSanPham');
             var danhSachSanPhamSX = taoDoiTuongSanPham().fromJSONs(danhSachSanPham);
-
-            if(cachSapXep = 'giamDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? 1 : -1);
-                console.log(danhSachSanPhamSX);
-            }
-
-            if(cachSapXep = 'tangDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? -1 : 1);
-                console.log(danhSachSanPhamSX);
+            if(cachSapXep == 'tangDan'){
+                danhSachSanPhamSX.sort((a,b)=> (Number(a.tinhGiaBan())) > (Number(b.tinhGiaBan()))? 1 : -1);
+            }else if(cachSapXep == 'giamDan'){
+                danhSachSanPhamSX.sort((a,b)=> (Number(a.tinhGiaBan())) > (Number(b.tinhGiaBan()))? -1 : 1);
             }
             html = chuyenDanhSachDoiTuongSanPhamThanhHTML(danhSachSanPhamSX);
             nodeProducts = document.getElementById('products');
