--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
             <span onclick="onClickXemAnhTruoc()" id="btn-prev"><i class="fas fa-chevron-circle-left"></i></span>
             <span onclick="onClickXemAnhSau()" id="btn-next"><i class="fas fa-chevron-circle-right"></i></span>
         </div>
+        <div id="khungChamTron">
+            
+        </div>
     </div>
     <main id="main">
         <div id="danh-muc">
